--- a/sistema/css/style.css
+++ b/sistema/css/style.css
@@ -1,5 +1,5 @@
 @import url(../fonts/GothamBook.css);
-@import url(../fonts/GothamBook.css);
+@import url(../fonts/GothamBold.css);
 /* diseño de registro de usuarios */
 .form_register{
     width: 450px;
@@ -60,27 +60,6 @@ input,select{
 .alert p{
     padding: 10px;
 }
-
-/* diseño del buscador 
-.form_search{
-    display: -webkit-box;
-    display: -moz-flex;
-    display: -ms-flexbox;
-    display: -o-flex;
-    display: flex;
-    background: initial;
-    padding: 10px;
-    border-radius: 10px;
-}
-.form_search .btn_search{
-    background: #1faac8;
-    color: #fff;
-    padding: 0 20px;
-    border: 0;
-    cursor: pointer;
-    margin: left 10px;
-}
-*/
 
 /* estilo css para agregar imagenes en el formulario registro_producto */
 .prevPhoto {
@@ -146,3 +125,9 @@ input,select{
 	width: 175px;
 }
 
+/* tamaño de la lista de productos */
+.img_producto img{
+    width: 60px;
+    height: auto;
+    margin: auto;
+}
