--- a/sistema/css/style.css
+++ b/sistema/css/style.css
@@ -131,3 +131,33 @@ input,select{
     height: auto;
     margin: auto;
 }
+/* estos son los diseños para la ventana emergente cuando se editen el almacen y precio del producto */
+.modal{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.81);
+    display: block;
+}
+.bodyModal{
+    width: 100%;
+    display: -webkit-inline-flex;
+    display: moz-inline-flex;
+    display: -ms-inline-flex;
+    display: -o-inline-flex;
+    display: inline-flex;
+    justify-content: center;
+    background-color: #fff;
+}
+.modal h1{
+    color: #0E725D;
+    text-transform: uppercase;
+}
+.modal h2{
+    text-transform: uppercase;
+    margin-top: 15px;
+}
+#form_add_product{
+    width: 420px;
+    text-align: center;
+}
