--- a/sistema/css/style.css
+++ b/sistema/css/style.css
@@ -1,5 +1,4 @@
-@import url(../fonts/GothamBook.css);
-@import url(../fonts/GothamBold.css);
+
 /* diseño de registro de usuarios */
 .form_register{
     width: 450px;
@@ -179,10 +178,10 @@ input,select{
 }
 .datos{
 	background-color: #e3ecef;
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
+	display: flex;
+	display: flex;
+	display: flex;
+	display: flex;
 	display: flex;
 	display: flex;
     justify-content: space-between;
@@ -193,10 +192,10 @@ input,select{
     margin-top: 10px;
 }
 .action_cliente{
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
-	display: -o-flex;
+	display: flex;
+	display: flex;
+	display: flex;
+	display: flex;
 	display: flex;
 	align-items: center;
 }
@@ -313,4 +312,91 @@ input,select{
     background-color: #a4a4a4;
     color: #CCC;
     cursor: default;
+}
+
+/* panel de control */
+.titlePanelControl{
+    width: 100%;
+    background: #e0dede;
+    padding: 5px 15px;
+    margin-bottom: 18pt !important;
+    color: #0a4661;
+}
+.divContainer{
+    margin-bottom: 20px;
+}
+.dashboard{
+    display: flex;
+    display: flex;
+    display: flex;
+  
+    justify-content: space-around;
+    width: 100%;
+    margin: auto;
+}
+.dashboard a{
+    color: #898989;
+    width: calc(100% /5);
+    padding: 20px;
+    background-color: #FFF;
+    font-size: 25pt;
+    text-align: center;
+}
+.containerPerfil{
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+.containerDataUser, .containerDataEmpresa{
+    width: 500px;
+    background-color: #e7e4e4;
+    padding: 20px;
+}
+
+/* tamañp de las imagenes del inicio*/
+.logoUser, .logEmpresa{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    margin: 20px auto;
+    padding: 25px;
+    background: #E9E9E9;
+}
+.logoUser img, .logoEmpresa img {
+    width: 100%;
+    height: 100%;
+}
+.divDataUser{
+    padding: 10px;
+    margin: auto;
+}
+.divInfoSistema h4{
+    background: #3279a7;
+    padding: 5px 10px;
+    color: #FFF;
+    border-radius: 5px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.divDataUser > div{
+    display: flex;
+}
+.divDataUser label{
+    width: 150px;
+    margin: 0;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.divDataUser span{
+    padding: 5px;
+}
+.divInfoSistema form{
+    padding: 20px;
+}
+.divInfoSistema button{
+    width: 100%;
 }
