--- a/sistema/css/style.css
+++ b/sistema/css/style.css
@@ -400,3 +400,7 @@ input,select{
 .divInfoSistema button{
     width: 100%;
 }
+.alertChangePass{
+    text-align: center;
+    font-weight: bold;
+}
